--- a/XCTInputValidationCodeBehindSample.Android/XCTInputValidationCodeBehindSample.Android.csproj
+++ b/XCTInputValidationCodeBehindSample.Android/XCTInputValidationCodeBehindSample.Android.csproj
@@ -53,11 +53,8 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1931" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
-    <PackageReference Include="Xamarin.CommunityToolkit">
-      <Version>1.0.2</Version>
-    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1829-pre6" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
